--- a/index.html
+++ b/index.html
@@ -6,39 +6,150 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pro Edu</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <style>
+        .blur
+        {
+            filter: brightness(50%);
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-warning">
-        <div class="container">
-          <a class="navbar-brand" href="#">ICT Care</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Courses</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Deals</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Success</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Register</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    
+    <!-- header-section-start -->
+    <header class="container">
+        <!-- navigation-bar-start -->
+        <nav class="navbar navbar-expand-lg bg-white">
+            <div class="container">
+              <a class="navbar-brand" href="#">ICT Care</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">Courses</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">Deals</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">Success</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">Register</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          <!-- navigation-bar-end -->
+    </header>
+    <!-- header-section-end -->
+
+    <!-- main-section-start -->
+    <main>
+        <!-- banner-section-start -->
+        <section class="container">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <!-- <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div> -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/cover/cover-1.png" class="d-block w-100 blur" alt="...">
+                    <div class="carousel-caption d-md-block">
+                      <h1 class="display-1 h1 text-white">Get Started Digital Learning</h1>
+                      <p class="text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
+                      <button type="button" class="btn btn-primary btn-lg">Get Started</button>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100 blur" alt="...">
+                    <div class="carousel-caption d-md-block">
+                        <h1 class="display-1 h1 text-white">Get Started Digital Learning</h1>
+                        <p class="text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
+                        <button type="button" class="btn btn-primary btn-lg">Get Started</button>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+
+        </section>
+        <!-- banner-section-end -->
+        <!-- pupular-courses-section-start -->
+        <section class="container py-5">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <h1 class="display-3">Discover Our Popular Courses</h1>
+                <p>It is long established fact that a reader will be ditracted by the readable content of a page when looking at its layout</p>
+            </div>
+            <div class="py-5">
+                <div class="row row-cols-2 gy-3">
+                  <div class="col d-flex flex-row gap-3 border border-light">
+                    <img src="images/course/course-1.png" alt="">
+                    <div class="pt-5">
+                        <h5>Fundamental Of UI/UX Design</h5>
+                        <p>Some quick example text to build on the card title and make up the bulk of the card</p>
+                        <h6 class="text-info">Price 20$</h6>
+                    </div>
+                  </div>
+                  <div class="col d-flex flex-row gap-3 border border-light">
+                    <img src="images/course/course-2.png" alt="">
+                    <div class="pt-5">
+                        <h5>Javascript Basic to advanced</h5>
+                        <p>Some quick example text to build on the card title and make up the bulk of the card</p>
+                        <h6 class="text-info">Price 30$</h6>
+                    </div>
+                  </div><div class="col d-flex flex-row gap-3 border border-light">
+                    <img src="images/course/course-3.png" alt="">
+                    <div class="pt-5">
+                        <h5>Fullstack Web Development</h5>
+                        <p>Some quick example text to build on the card title and make up the bulk of the card</p>
+                        <h6 class="text-info">Price 10$</h6>
+                    </div>
+                  </div><div class="col d-flex flex-row gap-3 border border-light">
+                    <img src="images/course/course-4.png" alt="">
+                    <div class="pt-5">
+                        <h5>Digital Marketing</h5>
+                        <p>Some quick example text to build on the card title and make up the bulk of the card</p>
+                        <h6 class="text-info">Price 20$</h6>
+                    </div>
+                  </div><div class="col d-flex flex-row gap-3 border border-light">
+                    <img src="images/course/course-5.png" alt="">
+                    <div class="pt-5">
+                        <h5>Photography Basic Rules</h5>
+                        <p>Some quick example text to build on the card title and make up the bulk of the card</p>
+                        <h6 class="text-info">Price 20$</h6>
+                    </div>
+                  </div><div class="col d-flex flex-row gap-3 border border-light">
+                    <img src="images/course/course-6.png" alt="">
+                    <div class="pt-5">
+                        <h5>Motion Graphics</h5>
+                        <p>Some quick example text to build on the card title and make up the bulk of the card</p>
+                        <h6 class="text-info">Price 20$</h6>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+        </section>
+        <!-- pupular-courses-section-end -->
+    </main>
+    <!-- main-section-end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
