--- a/index.html
+++ b/index.html
@@ -56,11 +56,6 @@
         <!-- banner-section-start -->
         <section class="container">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-                <!-- <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div> -->
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="images/cover/cover-1.png" class="d-block w-100 blur" alt="...">
@@ -97,8 +92,8 @@
                 <h1 class="display-3">Discover Our Popular Courses</h1>
                 <p>It is long established fact that a reader will be ditracted by the readable content of a page when looking at its layout</p>
             </div>
-            <div class="py-5">
-                <div class="row row-cols-2 gy-3">
+            <div>
+                <div class="row row-cols-2 my-4 border border-black">
                   <div class="col d-flex flex-row gap-3 border border-light">
                     <img src="images/course/course-1.png" alt="">
                     <div class="pt-5">
@@ -143,9 +138,8 @@
                         <h6 class="text-info">Price 20$</h6>
                     </div>
                   </div>
-                </div>
+                </div>   
               </div>
-
         </section>
         <!-- pupular-courses-section-end -->
     </main>
