--- a/index.html
+++ b/index.html
@@ -140,8 +140,24 @@
                   </div>
                 </div>   
               </div>
+              <div class="text-center">
+                <button type="button" class="btn btn-primary btn-lg">See More Courses</button>
+              </div>
         </section>
         <!-- pupular-courses-section-end -->
+        <!-- ready-to-join-start -->
+        <section class="container pb-5">
+          <div class="bg-primary p-5 d-flex flex-row">
+              <div class="">
+                <h1 class="text-white">Ready to join?</h1>
+                <p class="pe-5  me-5 text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at it's layout</p>
+              </div>
+              <div class="pt-2">
+                <button type="button" class="btn btn-light btn-lg text-primary">Register Now</button>
+              </div>
+          </div>
+        </section>
+        <!-- ready-to-join-end -->
     </main>
     <!-- main-section-end -->
 
