--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pro Edu</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/386f3c7b67.js" crossorigin="anonymous"></script>
     <style>
         .blur
         {
-            filter: brightness(50%);
+            filter: brightness(40%);
         }
     </style>
 </head>
@@ -19,7 +20,7 @@
         <!-- navigation-bar-start -->
         <nav class="navbar navbar-expand-lg bg-white">
             <div class="container">
-              <a class="navbar-brand" href="#">ICT Care</a>
+              <a class="navbar-brand" href="#"><h1>ICT Care</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -60,7 +61,7 @@
                   <div class="carousel-item active">
                     <img src="images/cover/cover-1.png" class="d-block w-100 blur" alt="...">
                     <div class="carousel-caption d-md-block">
-                      <h1 class="display-1 h1 text-white">Get Started Digital Learning</h1>
+                      <p class="display-1">Get Started Digital Learning</p>
                       <p class="text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
                       <button type="button" class="btn btn-primary btn-lg">Get Started</button>
                     </div>
@@ -88,13 +89,13 @@
         <!-- banner-section-end -->
         <!-- pupular-courses-section-start -->
         <section class="container py-5">
-            <div class="d-flex flex-column justify-content-center align-items-center">
+            <div class="container d-flex flex-column justify-content-center align-items-center">
                 <h1 class="display-3">Discover Our Popular Courses</h1>
                 <p>It is long established fact that a reader will be ditracted by the readable content of a page when looking at its layout</p>
             </div>
             <div>
-                <div class="row row-cols-2 my-4 border border-black">
-                  <div class="col d-flex flex-row gap-3 border border-light">
+                <div class="row row-cols-sm-1 row-cols-md-1 row-cols-lg-2 my-5">
+                  <div class="col d-flex flex-row gap-3 border border-light mb-3">
                     <img src="images/course/course-1.png" alt="">
                     <div class="pt-5">
                         <h5>Fundamental Of UI/UX Design</h5>
@@ -102,35 +103,35 @@
                         <h6 class="text-info">Price 20$</h6>
                     </div>
                   </div>
-                  <div class="col d-flex flex-row gap-3 border border-light">
+                  <div class="col d-flex flex-row gap-3 border border-light mb-3">
                     <img src="images/course/course-2.png" alt="">
                     <div class="pt-5">
                         <h5>Javascript Basic to advanced</h5>
                         <p>Some quick example text to build on the card title and make up the bulk of the card</p>
                         <h6 class="text-info">Price 30$</h6>
                     </div>
-                  </div><div class="col d-flex flex-row gap-3 border border-light">
+                  </div><div class="col d-flex flex-row gap-3 border border-light mb-3">
                     <img src="images/course/course-3.png" alt="">
                     <div class="pt-5">
                         <h5>Fullstack Web Development</h5>
                         <p>Some quick example text to build on the card title and make up the bulk of the card</p>
                         <h6 class="text-info">Price 10$</h6>
                     </div>
-                  </div><div class="col d-flex flex-row gap-3 border border-light">
+                  </div><div class="col d-flex flex-row gap-3 border border-light mb-3">
                     <img src="images/course/course-4.png" alt="">
                     <div class="pt-5">
                         <h5>Digital Marketing</h5>
                         <p>Some quick example text to build on the card title and make up the bulk of the card</p>
                         <h6 class="text-info">Price 20$</h6>
                     </div>
-                  </div><div class="col d-flex flex-row gap-3 border border-light">
+                  </div><div class="col d-flex flex-row gap-3 border border-light mb-3">
                     <img src="images/course/course-5.png" alt="">
                     <div class="pt-5">
                         <h5>Photography Basic Rules</h5>
                         <p>Some quick example text to build on the card title and make up the bulk of the card</p>
                         <h6 class="text-info">Price 20$</h6>
                     </div>
-                  </div><div class="col d-flex flex-row gap-3 border border-light">
+                  </div><div class="col d-flex flex-row gap-3 border border-light mb-3">
                     <img src="images/course/course-6.png" alt="">
                     <div class="pt-5">
                         <h5>Motion Graphics</h5>
@@ -147,13 +148,13 @@
         <!-- pupular-courses-section-end -->
         <!-- ready-to-join-start -->
         <section class="container pb-5">
-          <div class="bg-primary p-5 d-flex flex-row">
+          <div class="bg-primary p-5 d-flex flex-row flex-md-wrap flex-lg-nowrap">
               <div class="">
                 <h1 class="text-white">Ready to join?</h1>
                 <p class="pe-5  me-5 text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at it's layout</p>
               </div>
               <div class="pt-2">
-                <button type="button" class="btn btn-light btn-lg text-primary">Register Now</button>
+                <button type="button" class="btn btn-light btn-lg text-primary w-100 me-5 mt-4">Register Now</button>
               </div>
           </div>
         </section>
@@ -228,8 +229,39 @@
           </div>
         </section>
         <!-- frequently-asked-question-end -->
+        <!-- company-logo-start -->
+        <section class="my-5">
+          <div class="d-flex flex-column justify-content-center align-items-center d-md-none d-lg-flex">
+              <h1 class="mb-4">Trusted by over 800+ companies</h1>
+              <div>
+                 <img class="mx-3" src="images/company/company-1.png" alt="">
+                 <img class="mx-3" src="images/company/company-2.png" alt="">
+                 <img class="mx-3" src="images/company/company-3.png" alt="">
+                 <img class="mx-3" src="images/company/company-4.png" alt="">
+                 <img class="mx-3" src="images/company/company-5.png" alt="">
+                 <img class="mx-3" src="images/company/company-6.png" alt="">
+              </div>
+          </div>
+        </section>
+        <!-- company-logo-end -->
     </main>
     <!-- main-section-end -->
+    <!-- footer-start -->
+    <footer class="bg-dark p-5 d-flex flex-column justify-content-center align-items-center">
+      <div>
+        <h1 class="text-white text-center">ICT Care</h1>
+      <address class="text-white">Office 41, Zawaya Bulding, Ghala Muscat, Sultanate of Oman</address>
+      <h6 class="text-white text-center">Privacy Policy | Terms Of use</h6>
+      </div>
+      <div class="mt-3">
+        <p class="text-white text-center">Contact Us</p>
+        <a href="https://www.facebook.com" target="_blank" class="text-white mx-3"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.youtube.com" target="_blank" class="text-white mx-3"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://www.instagram.com" target="_blank" class="text-white mx-3"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://twitter.com" target="_blank" class="text-white mx-3"><i class="fa-brands fa-twitter"></i></a>
+      </div>
+    </footer>
+    <!-- footer-end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
