--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <div class="carousel-item active">
                     <img src="images/cover/cover-1.png" class="d-block w-100 blur" alt="...">
                     <div class="carousel-caption d-md-block">
-                      <p class="display-1">Get Started Digital Learning</p>
+                      <h1 class="display-1">Get Started Digital Learning</h1>
                       <p class="text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
                       <button type="button" class="btn btn-primary btn-lg">Get Started</button>
                     </div>
@@ -90,50 +90,50 @@
         <!-- pupular-courses-section-start -->
         <section class="container py-5">
             <div class="container d-flex flex-column justify-content-center align-items-center">
-                <h1 class="display-3">Discover Our Popular Courses</h1>
-                <p>It is long established fact that a reader will be ditracted by the readable content of a page when looking at its layout</p>
+                <h1 class="font-weight-bold text-center">Discover Our Popular Courses</h1>
+                <p class="text-center">It is long established fact that a reader will be ditracted by the readable content of a page when looking at its layout</p>
             </div>
             <div>
-                <div class="row row-cols-sm-1 row-cols-md-1 row-cols-lg-2 my-5">
-                  <div class="col d-flex flex-row gap-3 border border-light mb-3">
+                <div class="row row-cols-sm-1 row-cols-md-1 row-cols-lg-2 mt-3">
+                  <div class="col d-flex flex-row flex-wrap flex-md-nowrap flex-lg-nowrap gap-3 border border-light mb-4">
                     <img src="images/course/course-1.png" alt="">
-                    <div class="pt-5">
+                    <div class="pt-4">
                         <h5>Fundamental Of UI/UX Design</h5>
                         <p>Some quick example text to build on the card title and make up the bulk of the card</p>
                         <h6 class="text-info">Price 20$</h6>
                     </div>
                   </div>
-                  <div class="col d-flex flex-row gap-3 border border-light mb-3">
+                  <div class="col d-flex flex-row flex-wrap flex-md-nowrap flex-lg-nowrap gap-3 border border-light mb-4">
                     <img src="images/course/course-2.png" alt="">
-                    <div class="pt-5">
+                    <div class="pt-4">
                         <h5>Javascript Basic to advanced</h5>
                         <p>Some quick example text to build on the card title and make up the bulk of the card</p>
                         <h6 class="text-info">Price 30$</h6>
                     </div>
-                  </div><div class="col d-flex flex-row gap-3 border border-light mb-3">
+                  </div><div class="col d-flex flex-row flex-wrap flex-md-nowrap flex-lg-nowrap gap-3 border border-light mb-4">
                     <img src="images/course/course-3.png" alt="">
-                    <div class="pt-5">
+                    <div class="pt-4">
                         <h5>Fullstack Web Development</h5>
                         <p>Some quick example text to build on the card title and make up the bulk of the card</p>
                         <h6 class="text-info">Price 10$</h6>
                     </div>
-                  </div><div class="col d-flex flex-row gap-3 border border-light mb-3">
+                  </div><div class="col d-flex flex-row flex-wrap flex-md-nowrap flex-lg-nowrap gap-3 border border-light mb-4">
                     <img src="images/course/course-4.png" alt="">
-                    <div class="pt-5">
+                    <div class="pt-4">
                         <h5>Digital Marketing</h5>
                         <p>Some quick example text to build on the card title and make up the bulk of the card</p>
                         <h6 class="text-info">Price 20$</h6>
                     </div>
-                  </div><div class="col d-flex flex-row gap-3 border border-light mb-3">
+                  </div><div class="col d-flex flex-row flex-wrap flex-md-nowrap flex-lg-nowrap gap-3 border border-light mb-4">
                     <img src="images/course/course-5.png" alt="">
-                    <div class="pt-5">
+                    <div class="pt-4">
                         <h5>Photography Basic Rules</h5>
                         <p>Some quick example text to build on the card title and make up the bulk of the card</p>
                         <h6 class="text-info">Price 20$</h6>
                     </div>
-                  </div><div class="col d-flex flex-row gap-3 border border-light mb-3">
+                  </div><div class="col d-flex flex-row flex-wrap flex-md-nowrap flex-lg-nowrap gap-2 border border-light mb-4">
                     <img src="images/course/course-6.png" alt="">
-                    <div class="pt-5">
+                    <div class="pt-4">
                         <h5>Motion Graphics</h5>
                         <p>Some quick example text to build on the card title and make up the bulk of the card</p>
                         <h6 class="text-info">Price 20$</h6>
@@ -148,13 +148,32 @@
         <!-- pupular-courses-section-end -->
         <!-- ready-to-join-start -->
         <section class="container pb-5">
-          <div class="bg-primary p-5 d-flex flex-row flex-md-wrap flex-lg-nowrap">
-              <div class="">
-                <h1 class="text-white">Ready to join?</h1>
-                <p class="pe-5  me-5 text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at it's layout</p>
+          <div class="bg-primary p-5 d-flex flex-row flex-md-wrap flex-lg-nowrap flex-wrap">
+              <div>
+                <h1 class="text-white text-center">Ready to join?</h1>
+                <p class=" text-white text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at it's layout</p>
               </div>
-              <div class="pt-2">
-                <button type="button" class="btn btn-light btn-lg text-primary w-100 me-5 mt-4">Register Now</button>
+              <div>
+                <button type="button" class="btn btn-light text-primary mx-5 mt-5 w-75 font-weight-bold" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                  Register Now
+                </button>
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Are you interested?</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        Please Contact with us your Gmail Id. We will inform you further information
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
           </div>
         </section>
@@ -162,8 +181,8 @@
         <!-- frequently-asked-question-start -->
         <section class="container">
           <div class="d-flex flex-column justify-content-center align-items-center">
-            <h1>Frequently Asked Questions</h1>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at it's layout</p>
+            <h1 class="text-center">Frequently Asked Questions</h1>
+            <p class="text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at it's layout</p>
           </div>
           <div class="accordion" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
@@ -231,7 +250,7 @@
         <!-- frequently-asked-question-end -->
         <!-- company-logo-start -->
         <section class="my-5">
-          <div class="d-flex flex-column justify-content-center align-items-center d-md-none d-lg-flex">
+          <div class="d-flex flex-column justify-content-center align-items-center d-none d-lg-flex">
               <h1 class="mb-4">Trusted by over 800+ companies</h1>
               <div>
                  <img class="mx-3" src="images/company/company-1.png" alt="">
@@ -250,7 +269,7 @@
     <footer class="bg-dark p-5 d-flex flex-column justify-content-center align-items-center">
       <div>
         <h1 class="text-white text-center">ICT Care</h1>
-      <address class="text-white">Office 41, Zawaya Bulding, Ghala Muscat, Sultanate of Oman</address>
+      <address class="text-white text-center">Office 41, Zawaya Bulding, Ghala Muscat, Sultanate of Oman</address>
       <h6 class="text-white text-center">Privacy Policy | Terms Of use</h6>
       </div>
       <div class="mt-3">
